# Copyright (c) 2022 Trail of Bits, Inc.

add_subdirectory( ADT )
add_subdirectory( Dbg )
add_subdirectory( Fuzz )
add_subdirectory( Gap )
add_subdirectory( IR )
add_subdirectory( Lifter )
add_subdirectory( Printers )
add_subdirectory( Support )
add_subdirectory( Transforms )
add_subdirectory( Util )
add_subdirectory( Run )

# TODO(): Remove as deprecated?
# Currently not actively developed, marked for removal.
# add_subdirectory( Decoder )
# add_subdirectory( Diff )
